--- a/app/design/frontend/default/iphone/Mage_Paypal/express/review/review.phtml
+++ b/app/design/frontend/default/iphone/Mage_Paypal/express/review/review.phtml
@@ -34,7 +34,7 @@ $shippingAddress = $this->getShippingAddress();
 <?php echo $this->getMessagesBlock()->toHtml() ?>
 <script type="text/javascript">
 //<![CDATA[
-    var countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?>
+    var countryRegions = <?php echo $this->helper('Mage_Directory_Helper_Data')->getRegionJson() ?>
 //]]>
 </script>
 <div class="paypal-review-order">
