--- a/app/design/frontend/enterprise/iphone/Enterprise_GiftRegistry/customer/list.phtml
+++ b/app/design/frontend/enterprise/iphone/Enterprise_GiftRegistry/customer/list.phtml
@@ -22,8 +22,8 @@
         <?php foreach($entityCollection as $item): ?>
             <li class="list-item">
 
-                <a class="btn-remove" href="<?php echo $this->getDeleteUrl($item)?>" onclick="return confirm('<?php echo Mage::helper('enterprise_giftregistry')->__('Are you sure you want to delete this gift registry?'); ?>');"><?php echo $this->__('Delete') ?></a>
-                <h2><?php echo $this->helper('core/string')->truncate($this->getEscapedTitle($item), 70)?></h2>
+                <a class="btn-remove" href="<?php echo $this->getDeleteUrl($item)?>" onclick="return confirm('<?php echo Mage::helper('Enterprise_Giftregistry_Helper_Data')->__('Are you sure you want to delete this gift registry?'); ?>');"><?php echo $this->__('Delete') ?></a>
+                <h2><?php echo $this->helper('Mage_Core_Helper_String')->truncate($this->getEscapedTitle($item), 70)?></h2>
                 <a class="link-edit" href="<?php echo $this->getEditUrl($item)?>"><?php echo $this->__('Edit') ?></a>
 
                 <div class="message">
