--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/list.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/list.phtml
@@ -32,7 +32,7 @@
                     <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>">
                         <div class="wrap">
                             <div class="product-image">
-                                <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(130); ?>" width="65" height="65" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+                                <img src="<?php echo $this->helper('Mage_Catalog_Helper_Image')->init($_product, 'small_image')->resize(130); ?>" width="65" height="65" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
                             </div>
                             <div class="product-shop">
                                 <header>
@@ -46,9 +46,9 @@
                         <ul>
                             <li><a href="<?php echo $_product->getProductUrl() ?>" class="i-view-details"><i></i><?php echo $this->__('View Details') ?></a></li>
                             <li><a href="<?php echo $this->getUrl('catalog/product/gallery', array('id'=>$_product->getId())) ?>" class="i-view-gallery"><i></i><?php echo $this->__('View Gallery') ?></a></li>
-                            <li><a href="<?php echo $this->helper('catalog/product')->getEmailToFriendUrl($_product) ?>" class="i-send-friend"><i></i><?php echo $this->__('Tell a Friend') ?></a></li>
-                            <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                                <li><a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="i-send-wishlist"><i></i><?php echo $this->__('Add to Wishlist') ?></a></li>
+                            <li><a href="<?php echo $this->helper('Mage_Catalog_Helper_Product')->getEmailToFriendUrl($_product) ?>" class="i-send-friend"><i></i><?php echo $this->__('Tell a Friend') ?></a></li>
+                            <?php if ($this->helper('Mage_Wishlist_Helper_Data')->isAllow()) : ?>
+                                <li><a href="<?php echo $this->helper('Mage_Wishlist_Helper_Data')->getAddUrl($_product) ?>" class="i-send-wishlist"><i></i><?php echo $this->__('Add to Wishlist') ?></a></li>
                             <?php endif; ?>
                             <li><a href="<?php echo $this->getAddToCartUrl($_product) ?>" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product) ?>'); return false;" class="i-add-to-cart"><i></i><?php echo $this->__('Add to Cart') ?></a></li>
                         </ul>
