--- a/app/design/frontend/enterprise/iphone/Mage_Checkout/onepage/review/item.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Checkout/onepage/review/item.phtml
@@ -176,7 +176,7 @@
                 <?php endif; ?>
             <?php endif; ?>
 
-            <?php if ($this->helper('tax')->displayCartPriceInclTax()): ?>
+            <?php if ($this->helper('Mage_Tax_Helper_Data')->displayCartPriceInclTax()): ?>
 
                 <?php $_incl = $this->helper('Mage_Checkout_Helper_Data')->getSubtotalInclTax($_item); ?>
                 <?php if (Mage::helper('Mage_Weee_Helper_Data')->typeOfDisplay($_item, array(1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
