--- a/app/design/frontend/enterprise/iphone/Mage_Wishlist/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Wishlist/view.phtml
@@ -9,7 +9,7 @@
  */
 /* @var $this Mage_Wishlist_Block_Customer_Wishlist */
 ?>
-<?php if ($this->helper('wishlist')->isAllow()) : ?>
+<?php if ($this->helper('Mage_Wishlist_Helper_Data')->isAllow()) : ?>
     <div class="my-wishlist">
         <div class="page-title title-buttons">
             <h1><?php echo $this->getTitle(); ?></h1>
