Fixed MAGETWO-894: Update from Magento 1 (30-1) - fixed some factory names - fixed ajax handles in layout for iphone theme - fixed usage of obsolete methods - removed enterprise_giftregistry_index_view layout handle because it uses non-existant block type

--- a/app/code/core/Mage/Wishlist/view/frontend/item/column/cart.phtml
+++ b/app/code/core/Mage/Wishlist/view/frontend/item/column/cart.phtml
@@ -12,7 +12,7 @@
 /* @var Mage_Wishlist_Model_Item $item */
 $item = $this->getItem();
 $product = $item->getProduct();
-$options = $this->getChild('customer.wishlist.item.options')
+$options = $this->getChildBlock('customer.wishlist.item.options')
     ->setItem($item)
     ->getConfiguredOptions();
 ?>
