--- a/app/design/frontend/default/iphone/Mage_Wishlist/view.phtml
+++ b/app/design/frontend/default/iphone/Mage_Wishlist/view.phtml
@@ -21,13 +21,13 @@
             <fieldset>
                 <?php if ($this->hasWishlistItems()): ?>
                     <?php echo $this->getBlockHtml('formkey');?>
-                    <?php $this->getChild('items')->setItems($this->getWishlistItems()); ?>
+                    <?php $this->getChildBlock('items')->setItems($this->getWishlistItems()); ?>
                     <?php echo $this->getChildHtml('items');?>
                 <?php else: ?>
                     <p class="wishlist-empty"><?php echo $this->__('You have no items in your wishlist.') ?></p>
                 <?php endif ?>
                 <div class="buttons-set">
-                    <?php echo $this->getChild('control_buttons')->toHtml();?>
+                    <?php echo $this->getChildHtml('control_buttons');?>
                 </div>
             </fieldset>
         </form>
