--- a/app/design/frontend/enterprise/iphone/template/targetrule/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/enterprise/iphone/template/targetrule/catalog/product/list/upsell.phtml
@@ -20,7 +20,7 @@
         <?php endif ?>
                 -><li class="item<?php if (($i - 1) % $this->getColumnCount() == 0):?> first<?php elseif ($i % $this->getColumnCount() == 0):?> last<?php endif;?>">
                     <?php
-                        $itemBlock = $this->getChild('catalog.product.upsell.item')->setItem($_item)->setPosition($i);
+                        $itemBlock = $this->getChildBlock('catalog.product.upsell.item')->setItem($_item)->setPosition($i);
                         echo $itemBlock->toHtml();
                     ?>
                 </li><!-
