--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
@@ -53,7 +53,7 @@
                     <?php else:?>
                         <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1') ):?>
                             <div class="options-container-small">
-                                <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
+                                <?php echo $this->getChildChildHtml('container1') ?>
                             </div>
                         <?php endif;?>
                     <?php endif; ?>
@@ -65,7 +65,7 @@
 
         <div class="product-collateral">
 
-            <?php foreach ($this->getChildGroup('detailed_info', 'getChildHtml') as $alias => $html):?>
+            <?php foreach ($this->getGroupChildNames('detailed_info', 'getChildHtml') as $alias => $html):?>
             <div class="box-collateral <?php echo "box-{$alias}"?>">
                 <?php if ($title = $this->getChildData($alias, 'title')):?>
                 <h2><?php echo $this->escapeHtml($title); ?></h2>
@@ -83,7 +83,7 @@
 
         <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container2') ):?>
             <div class="options-container-big">
-                <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
+                <?php echo $this->getChildChildHtml('container2') ?>
             </div>
         <?php endif;?>
     </form>
