--- a/app/design/frontend/enterprise/iphone/layout/wishlist.xml
+++ b/app/design/frontend/enterprise/iphone/layout/wishlist.xml
@@ -79,11 +79,11 @@ Wishlist pages
                         </action>
                     </block>
                 </block>
-                <block type="core/text_list" name="customer.wishlist.buttons" as="control_buttons">
-                    <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.share" template="wishlist/button/share.phtml"></block>
-                    <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.toCart" template="wishlist/button/tocart.phtml"></block>
-                    <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.update" template="wishlist/button/update.phtml"></block>
-                </block>
+                <container name="customer.wishlist.buttons" as="control_buttons" label="Customer Wishlist Buttons">
+                    <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.share" template="wishlist/button/share.phtml"/>
+                    <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.toCart" template="wishlist/button/tocart.phtml"/>
+                    <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.update" template="wishlist/button/update.phtml"/>
+                </container>
             </block>
         </reference>
         <reference name="right">
