--- a/app/design/frontend/default/iphone/Mage_Catalog/category/view.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/category/view.phtml
@@ -16,7 +16,7 @@
  */
 ?>
 <?php
-    $_helper    = $this->helper('catalog/output');
+    $_helper    = $this->helper('Mage_Catalog_Helper_Output');
     $_category  = $this->getCurrentCategory();
     $_categoryTitle = '<div class="category-title page-title"><h1>'.$_helper->categoryAttribute($_category, $_category->getName(), 'name').'</h1></div>';
     $_imgUrl = $_category->getImageUrl();
