--- a/app/design/frontend/default/iphone/Mage_Review/customer/list.phtml
+++ b/app/design/frontend/default/iphone/Mage_Review/customer/list.phtml
@@ -30,7 +30,7 @@
                                 </div>
                             </dd>
                         <?php endif; ?>
-                        <dd><?php echo $this->helper('review')->getDetailHtml($_review->getDetail()) ?></dd>
+                        <dd><?php echo $this->helper('Mage_Review_Helper_Data')->getDetailHtml($_review->getDetail()) ?></dd>
                         <dd><a href="<?php echo $this->getReviewLink() ?>id/<?php echo $_review->getReviewId() ?>"><?php echo $this->__('View Details') ?></a></dd>
                     </dl>
                 </li>
