--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/breadcrumbs.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/breadcrumbs.phtml
@@ -9,7 +9,7 @@
  */
 ?>
 <?php /** @var $this Mage_DesignEditor_Block_Toolbar_Breadcrumbs */ ?>
-<div id="vde_breadcrumbs">
+<div class="vde_breadcrumbs">
     <?php $isFirstItem = true; ?>
     <?php foreach ($this->getBreadcrumbs() as $breadcrumb) : ?>
         <?php if (!$isFirstItem) : ?>
