--- a/app/design/frontend/default/iphone/skin/default/css/custom.css
+++ b/app/design/frontend/default/iphone/skin/default/css/custom.css
@@ -1,3 +1,12 @@
+/**
+ * {license_notice}
+ *
+ * @category        design
+ * @package        default_iphone
+ * @copyright       {copyright}
+ * @license          {license_link}
+ */
+
 /* Theme options */
 
 /* Links Color */
