Fixed MAGETWO-894: Update from Magento 1 (30-1) - removed enterprise template from default theme - removed enterprise word in PHPDoc in default templates

--- a/app/design/frontend/default/iphone/Mage_Bundle/sales/order/items/renderer.phtml
+++ b/app/design/frontend/default/iphone/Mage_Bundle/sales/order/items/renderer.phtml
@@ -3,7 +3,7 @@
  * {license_notice}
  *
  * @category    design
- * @package     enterprise_iphone
+ * @package     default_iphone
  * @copyright   {copyright}
  * @license     {license_link}
  */
