--- a/app/design/frontend/default/iphone/Mage_Catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/list/toolbar.phtml
@@ -3,7 +3,7 @@
  * {license_notice}
  *
  * @category    design
- * @package     enterprise_iphone
+ * @package     default_iphone
  * @copyright   {copyright}
  * @license     {license_link}
  */
