Implemented MAGETWO-905: Restore Password Moving from Mage_Adminhtml into URMM - moved actions from Mage_Backend_Adminhtml_IndexController into new controller Mage_User_Adminhtml_IndexController - updated layout for Mage_Backend - updated config, layout for Mage_User - move template admin/forgotpassword.phtml - move email template for password_reset_confirmation - updated config (move declaration for email template) - move tests for actions restore password from Mage_Backend_Adminhtml_IndexControllerTest into Mage_User_Adminhtml_IndexControllerTest.php

--- a/app/code/core/Mage/Backend/view/adminhtml/admin/login.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/admin/login.phtml
@@ -45,8 +45,8 @@
                 <?php echo $this->getChildHtml('form.additional.info'); ?>
                 <div class="clear"></div>
                 <div class="form-buttons">
-                    <a class="left" href="<?php echo Mage::helper('Mage_Backend_Helper_Data')->getUrl('adminhtml/index/forgotpassword', array('_nosecret' => true)) ?>"><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Forgot your password?') ?></a>
-                    <input type="submit" class="form-button" value="<?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Login') ?>" title="<?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Login') ?>" /></div>
+                    <?php echo $this->getChildHtml('form.buttons'); ?>
+                </div>
             </div>
             <p class="legal"><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Magento is a trademark of Magento Inc. Copyright &copy; %s Magento Inc.', date('Y')) ?></p>
         </form>
