--- a/app/code/core/Mage/User/view/adminhtml/admin/forgotpassword.phtml
+++ b/app/code/core/Mage/User/view/adminhtml/admin/forgotpassword.phtml
@@ -12,7 +12,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Log into Magento Admin Page'); ?></title>
+    <title><?php echo Mage::helper('Mage_User_Helper_Data')->__('Log into Magento Admin Page'); ?></title>
     <link type="text/css" rel="stylesheet" href="<?php echo $this->getSkinUrl('reset.css'); ?>" media="all" />
     <link type="text/css" rel="stylesheet" href="<?php echo $this->getSkinUrl('boxes.css'); ?>" media="all" />
     <link rel="icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico'); ?>" type="image/x-icon" />
@@ -35,18 +35,18 @@
         <form method="post" action="" id="loginForm">
             <fieldset class="login-form">
                 <input name="form_key" type="hidden" value="<?php echo $this->getFormKey(); ?>" />
-                <h2><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Forgot your user name or password?'); ?></h2>
+                <h2><?php echo Mage::helper('Mage_User_Helper_Data')->__('Forgot your user name or password?'); ?></h2>
                 <div id="messages">
                     <?php echo $this->getMessagesBlock()->getGroupedHtml(); ?>
                 </div>
-                <div class="input-box forgot-password"><label for="email"><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Email Address:'); ?></label><br />
+                <div class="input-box forgot-password"><label for="email"><?php echo Mage::helper('Mage_User_Helper_Data')->__('Email Address:'); ?></label><br />
                     <input type="text" id="email" name="email" value="" class="required-entry input-text forgot-password validate-email" style="width:461px;" />
                 </div>
                 <?php echo $this->getChildHtml('form.additional.info'); ?>
                 <div class="clear"></div>
                 <div class="form-buttons">
-                    <a class="left" href="<?php echo $this->getUrl('adminhtml', array('_nosecret' => true)); ?>">&laquo; <?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Back to Login'); ?></a>
-                    <button class="forgot-password" onclick="loginForm.submit()" type="button"><span><span><span><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Retrieve Password'); ?></span></span></span></button>
+                    <a class="left" href="<?php echo $this->getUrl('adminhtml', array('_nosecret' => true)); ?>">&laquo; <?php echo Mage::helper('Mage_User_Helper_Data')->__('Back to Login'); ?></a>
+                    <button class="forgot-password" onclick="loginForm.submit()" type="button"><span><span><span><?php echo Mage::helper('Mage_User_Helper_Data')->__('Retrieve Password'); ?></span></span></span></button>
                 </div>
             </fieldset>
             <p class="legal"><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Magento is a trademark of Magento Inc. Copyright &copy; %s Magento Inc.', date('Y')); ?></p>
