CR Fix MAGETWO-894: Update from Magento 1 (30-1) - fixed product view template of iphone theme

--- a/app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
@@ -66,7 +66,10 @@
 
         <div class="product-collateral">
 
-            <?php foreach ($this->getGroupChildNames('detailed_info', 'getChildHtml') as $alias => $html):?>
+            <?php $layout = $this->getLayout(); ?>
+            <?php foreach ($this->getGroupChildNames('detailed_info', 'getChildHtml') as $name):?>
+            <?php $html = $layout->renderElement($name); ?>
+            <?php $alias = $layout->getElementAlias($name); ?>
             <div class="box-collateral <?php echo "box-{$alias}"?>">
                 <?php if ($title = $this->getChildData($alias, 'title')):?>
                 <h2><?php echo $this->escapeHtml($title); ?></h2>
