Implement MAGETWO-877: UI of Users and Roles Management Moving into URMM - implemented UI of users and roles management is based on layout - integration test for changed functionality were created

--- a/app/code/core/Mage/User/view/adminhtml/userinfo.phtml
+++ b/app/code/core/Mage/User/view/adminhtml/userinfo.phtml
@@ -6,6 +6,7 @@
  * @package     default_default
  * @copyright   {copyright}
  * @license     {license_link}
+ * @deprecated is not used in code
  */
 ?>
 <div class="content-header">
