--- a/app/code/core/Mage/User/view/adminhtml/users.phtml
+++ b/app/code/core/Mage/User/view/adminhtml/users.phtml
@@ -6,6 +6,7 @@
  * @package     default_default
  * @copyright   {copyright}
  * @license     {license_link}
+ * @deprecated is not used in code
  */
 ?>
 <div class="content-header">
