--- a/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/materialization/skin/default/mat_style.css
+++ b/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/materialization/skin/default/mat_style.css
@@ -8,5 +8,4 @@
  * @license     {license_link}
  */
 @import url(mat_sub.css);
-b {background: url(images/square.png);}
-i {background: url(images/vrectangle.png);}
+p {background: url(images/square.png);}
