MAGETWO-906: Images in CSS-Files are Not Re-Materialized Automatically - renamed "materialization" term to "publication" as agreed with tech-writer

--- a/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/publication/skin/default/style.css
+++ b/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/publication/skin/default/style.css
@@ -7,5 +7,5 @@
  * @copyright   {copyright}
  * @license     {license_link}
  */
-@import url(mat_sub.css);
+@import url(sub.css);
 p {background: url(images/square.png);}
