Implemented MAGETWO-907: Persistent Highlighting in Visual Design Editor - implemented storing highlighting state between requests to different pages - changed algorithm of storing child elements while highlighting is "off"

--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
@@ -20,7 +20,9 @@
 <script type="text/javascript">
 (function ($) {
     $(document).ready(function () {
-        designEditor = new DesignEditor();
+        designEditor = new DesignEditor({
+            'cookie_name': '<?php echo Mage_DesignEditor_Model_Session::COOKIE_HIGHLIGHTING; ?>'
+        });
 
         $('.vde_toolbar_cell_title').click(function(){
             var cellElement = $(this).parents('.vde_toolbar_cell');
