Implemented MAGETWO-907: Persistent Highlighting in Visual Design Editor - implemented tests - renamed JS cookie name option - changed isHighlightingEnabled() to isHighlightingDisabled() because 'enabled' is default state

--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
@@ -21,7 +21,7 @@
 (function ($) {
     $(document).ready(function () {
         designEditor = new DesignEditor({
-            'cookie_name': '<?php echo Mage_DesignEditor_Model_Session::COOKIE_HIGHLIGHTING; ?>'
+            'cookie_highlighting_name': '<?php echo Mage_DesignEditor_Model_Session::COOKIE_HIGHLIGHTING; ?>'
         });
 
         $('.vde_toolbar_cell_title').click(function(){
