--- a/app/code/core/Mage/DesignEditor/view/frontend/wrapping.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/wrapping.phtml
@@ -12,7 +12,7 @@
 <?php
 $elementId = $this->getElementId();
 $elementHtml = $this->getElementHtml();
-$hideWrapping = !Mage::getSingleton('Mage_DesignEditor_Model_Session')->isHighlightingEnabled();
+$hideWrapping = Mage::getSingleton('Mage_DesignEditor_Model_Session')->isHighlightingDisabled();
 $cssClass = 'vde_element_wrapper'
     . ($this->getIsDraggable() ? ' vde_draggable' : '')
     . ($this->getIsContainer() ? ' vde_container' : '')
