CR fixes MAGETWO-906: Images in CSS-Files are Not Re-Materialized Automatically - addressed different comments to improve code - reformatted images to dramatically reduce occupied size

--- a/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/publication/skin/default/style.css
+++ b/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/publication/skin/default/style.css
@@ -8,4 +8,4 @@
  * @license     {license_link}
  */
 @import url(sub.css);
-p {background: url(images/square.png);}
+p {background: url(images/square.gif);}
