--- a/app/code/core/Mage/Backend/view/adminhtml/admin/login.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/admin/login.phtml
@@ -31,7 +31,7 @@
 <body id="page-login" onload="document.forms.loginForm.username.focus();">
 <div class="login-container">
     <div class="login-box">
-        <form method="post" action="" id="loginForm">
+        <form method="post" action="<?php echo Mage::helper('Mage_Backend_Helper_Data')->getUrl('adminhtml/auth/index') ?>" id="loginForm">
             <div class="login-form">
                 <input name="form_key" type="hidden" value="<?php echo $this->getFormKey() ?>" />
                 <h2><?php echo Mage::helper('Mage_Backend_Helper_Data')->__('Log in to Admin Panel') ?></h2>
