--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar/highlighting.phtml
@@ -8,10 +8,11 @@
  * @license     {license_link}
  */
 ?>
+<?php /** @var $this Mage_DesignEditor_Block_Template */ ?>
 <div class="vde_toolbar_cell">
     <div class="vde_toolbar_cell_title"><?php echo $this->__('View Options'); ?></div>
     <div class="vde_toolbar_cell_content">
-            <div id="vde_highlighting" class="vde_cell_list_item<?php if (!Mage::getSingleton('Mage_DesignEditor_Model_Session')->isHighlightingDisabled()) echo ' checked'; ?>">
+            <div id="vde_highlighting" class="vde_cell_list_item<?php if (!$this->isHighlightingDisabled()) echo ' checked'; ?>">
                 <?php echo $this->__('Highlight Elements'); ?>
             </div>
     </div>
