--- a/app/code/core/Mage/DesignEditor/view/frontend/wrapping.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/wrapping.phtml
@@ -8,11 +8,11 @@
  * @license     {license_link}
  */
 ?>
-<?php /** @var $this Mage_Core_Block_Template */ ?>
+<?php /** @var $this Mage_DesignEditor_Block_Template */ ?>
 <?php
 $elementId = $this->getElementId();
 $elementHtml = $this->getElementHtml();
-$hideWrapping = Mage::getSingleton('Mage_DesignEditor_Model_Session')->isHighlightingDisabled();
+$hideWrapping = $this->isHighlightingDisabled();
 $cssClass = 'vde_element_wrapper'
     . ($this->getIsDraggable() ? ' vde_draggable' : '')
     . ($this->getIsContainer() ? ' vde_container' : '')
@@ -24,7 +24,7 @@ $cssClass = 'vde_element_wrapper'
         <?php echo $elementHtml; ?>
     <?php endif; ?>
 </div>
-<?php if ($hideWrapping && $elementHtml) : ?>
+<?php if ($hideWrapping && strlen($elementHtml)) : ?>
     <!--start_<?php echo $elementId; ?>-->
     <?php echo $elementHtml; ?>
     <!--end_<?php echo $elementId; ?>-->
