--- a/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
+++ b/app/code/core/Mage/DesignEditor/view/frontend/toolbar.phtml
@@ -20,7 +20,7 @@
 <script type="text/javascript">
 (function ($) {
     $(document).ready(function () {
-        designEditor = new DesignEditor('<?php echo $this->getOptionsJson(); ?>');
+        designEditor = new DesignEditor(<?php echo $this->getOptionsJson(); ?>);
 
         $('.vde_toolbar_cell_title').click(function(){
             var cellElement = $(this).parents('.vde_toolbar_cell');
