Fixed MAGETWO-847: "Ajax Pages" in Page Types Hierarchy - implemented support for AJAX pages - several AJAX pages are reformatted (not all) - still need to: reformat all AJAX pages, clean all the details, cover with tests

--- a/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
@@ -92,6 +92,7 @@ body {
     border-radius: 4px;
 }
 .vde_element_title {
+    font: 10pt Arial, Helvetica, sans-serif;
     margin: -2px 0px 0px -4px;
     padding: 0px;
     border-width: 2px 5px 6px 7px;
